plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

//    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
//    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'

//    implementation 'org.projectlombok:lombok'
//    annotationProcessor 'org.projectlombok:lombok'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'

}

tasks.named('test') {
    useJUnitPlatform()
}
tasks.withType(JavaCompile) {
    options.annotationProcessorPath = configurations.annotationProcessor
}
tasks.withType(JavaCompile) {
    options.fork = true
    options.forkOptions.jvmArgs << "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
}
